--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -309,8 +309,8 @@
             <div class="row justify-content-center">
                 <div class="col-lg-6">
                     <div class="section-title text-center pb-10">
-                        <h4 class="title">Get In touch</h4>
-                        <p class="text">Stop wasting time and money designing and managing a website that doesn’t get results. Happiness guaranteed!</p>
+                        <h4 class="title">Register here for participation</h4>
+                        <p class="text">मैराथन इवेंट में पार्टिसिपेट अथवा सहभागी बनने के लिए रजिस्टर करें |</p>
                     </div> <!-- section title -->
                 </div>
             </div> <!-- row -->
