--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -91,7 +91,7 @@
                     <div class="col-xl-8 col-lg-10">
                         <div class="header-content text-center">
                             <h3 class="header-title"> Jhanpar Marathon 2019 </h3>
-                            <p class="text">A Division Level Running Event</p>							
+                            <p class="text">संभागीय मैराथन प्रतिस्पर्धा शहडोल : प्रथम संस्करण 2019, झाँपर | </p>							
                             <ul class="header-btn">
                                 <li><a class="main-btn btn-one" href="#">GET IN TOUCH</a></li>
                                 <li><a class="main-btn btn-two video-popup" href="https://www.youtube.com/watch?v=r44RKWyfcFw">WATCH THE VIDEO <i class="lni-play"></i></a></li>
