--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -94,7 +94,7 @@
                             <p class="text">संभागीय मैराथन प्रतिस्पर्धा शहडोल : प्रथम संस्करण 2019, झाँपर | </p>							
                             <ul class="header-btn">
                                 <li><a class="main-btn btn-one" href="#">GET IN TOUCH</a></li>
-                                <li><a class="main-btn btn-two video-popup" href="https://www.youtube.com/watch?v=r44RKWyfcFw">WATCH THE VIDEO <i class="lni-play"></i></a></li>
+                                <li><a class="main-btn btn-two video-popup" href="https://www.youtube.com/watch?v=4jCDjnzI6W0&list=PLzoh8I1GyIHmzx5GpUaul_FZxqRONDPwM">WATCH THE VIDEO <i class="lni-play"></i></a></li>
                             </ul>
                         </div> <!-- header content -->
                     </div>
@@ -146,11 +146,11 @@
                         <div class="col-md-6">
                             <div class="services-content mt-40 d-sm-flex">
                                 <div class="services-icon">
-                                    <i class="lni-brush"></i>
+                                    <img src="assets/images/takshshila.svg" alt="flower"> 
                                 </div>
                                 <div class="services-content media-body">
                                     <h4 class="services-title">Takshshila Sahitya Publication</h4>
-                                    <p class="text"></br> </p>
+                                    <p class="text">Takshshila Sahitya Publication</br> </p>
                                 </div>
                             </div> <!-- services content -->
                         </div>
