--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -59,13 +59,16 @@
                                         <a class="page-scroll" href="#home">HOME</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="page-scroll" href="#service">Event Sponsors</a>
+                                        <a class="page-scroll" href="#service">Sponsors</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="page-scroll" href="#pricing">Race Winners</a>
+                                        <a class="page-scroll" href="#pricing">Winners</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="page-scroll" href="#contact">Register</a>
+                                        <a class="page-scroll" href="#contact">Registration</a>
+                                    </li>
+									 <li class="nav-item">
+                                        <a class="page-scroll" href="#volunteer">Volunteer</a>
                                     </li>
                                 </ul>
                             </div>
@@ -94,7 +97,7 @@
                             <p class="text">संभागीय मैराथन प्रतिस्पर्धा शहडोल : प्रथम संस्करण 2019, झाँपर | </p>							
                             <ul class="header-btn">
                                 <li><a class="main-btn btn-one" href="#">GET IN TOUCH</a></li>
-                                <li><a class="main-btn btn-two video-popup" href="https://www.youtube.com/watch?v=4jCDjnzI6W0&list=PLzoh8I1GyIHmzx5GpUaul_FZxqRONDPwM">WATCH THE VIDEO <i class="lni-play"></i></a></li>
+                                <li><a class="main-btn btn-two video-popup" href="https://www.youtube.com/watch?v=qq1kGDd4Q60">WATCH THE VIDEO <i class="lni-play"></i></a></li>
                             </ul>
                         </div> <!-- header content -->
                     </div>
@@ -289,8 +292,8 @@
             <div class="row justify-content-center">
                 <div class="col-lg-6">
                     <div class="section-title text-center pb-10">
-                        <h4 class="title">Register here for participation</h4>
-                        <p class="text">मैराथन इवेंट में पार्टिसिपेट अथवा सहभागी बनने के लिए रजिस्टर करें |</p>
+                        <h4 class="title">Race Registration</h4>
+                        <p class="text">मैराथन रेस में पार्टिसिपेट करने के लिए यहाँ रजिस्टर करें |</p>
                     </div> <!-- section title -->
                 </div>
             </div> <!-- row -->
@@ -298,6 +301,25 @@
                 <div class="col-lg-8">
                     <div class="contact-form">
 					<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdaMalXXcanJh9k1YBQTacctSS_HMCjMhlkiP6bsfxvtwY0Lw/viewform?embedded=true" width="640" height="1158" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                </div>
+            </div> <!-- row -->
+        </div> <!-- conteiner -->
+    </section>
+	
+	  <section id="volunteer" class="contact-area">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-6">
+                    <div class="section-title text-center pb-10">
+                        <h4 class="title">Register here for event participation</h4>
+                        <p class="text">मैराथन इवेंट में पार्टिसिपेट अथवा सहभागी बनने के लिए रजिस्टर करें |</p>
+                    </div> <!-- section title -->
+                </div>
+            </div> <!-- row -->
+            <div class="row justify-content-center">
+                <div class="col-lg-8">
+                    <div class="contact-form">
+			<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSegYae5hPYNF9pnTixJBvJtRonPr5yPt-A62gEXuYRHd7Pv7g/viewform?embedded=true" width="640" height="1204" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
                 </div>
             </div> <!-- row -->
         </div> <!-- conteiner -->
