--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -63,10 +63,7 @@
                                     </li>
                                     <li class="nav-item">
                                         <a class="page-scroll" href="#pricing">Winners</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="page-scroll" href="#contact">Registration</a>
-                                    </li>
+                                    </li>                                    
 									 <li class="nav-item">
                                         <a class="page-scroll" href="#volunteer">Volunteer</a>
                                     </li>
@@ -132,7 +129,7 @@
                             <img src="assets/images/kurmi.svg" alt="flower">
                         </div>
                                 <div class="services-content media-body">
-                                    <p class="services-title">Sambhageey Kurmi Samaj, Shahdol</p>                                    
+                                    <p class="text">Sambhageey Kurmi Samaj, Shahdol</p>                                    
                                 </div>
                             </div> <!-- services content -->
                         </div>
@@ -142,7 +139,7 @@
                                    <img src="assets/images/utkarsh.svg" alt="flower">
                                 </div>
                                 <div class="services-content media-body">
-                                    <p class="services-title">Jhanpar Utkarsh Yuvak Mandal, Beohari</p>
+                                    <p class="text">Jhanpar Utkarsh Yuvak Mandal,Beohari </p>
                                 </div>
                             </div> <!-- services content -->
                         </div>
@@ -152,7 +149,7 @@
                                     <img src="assets/images/takshshila.svg" alt="flower"> 
                                 </div>
                                 <div class="services-content media-body">
-                                    <h4 class="services-title">Takshshila Sahitya Publication</h4>
+                                   
                                     <p class="text">Takshshila Sahitya Publication</br> </p>
                                 </div>
                             </div> <!-- services content -->
@@ -163,8 +160,8 @@
                                      <img src="assets/images/" alt>
                                 </div>
                                 <div class="services-content media-body">
-                                    <h4 class="services-title"> Bandhavgarh Kurmi Samaj </h4>									
-                                    <p class="text"></br></p>
+                                    							
+                                    <p class="text">Bandhavgarh Kurmi Samaj</br></p>
                                 </div>
                             </div> <!-- services content -->
                         </div>
