--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -79,7 +79,7 @@
                             <div class="navbar-social d-none d-sm-flex align-items-center">
                                 <span>FOLLOW US</span>
                                 <ul>
-                                    <li><a href="#"><i class="lni-facebook-filled"></i></a></li>
+                                    <li><a href="https://www.facebook.com/shahdolrunners/?modal=admin_todo_tour"><i class="lni-facebook-filled"></i></a></li>
                                     <li><a href="#"><i class="lni-twitter-original"></i></a></li>
                                     <li><a href="#"><i class="lni-instagram-original"></i></a></li>
                                     <li><a href="#"><i class="lni-linkedin-original"></i></a></li>                                  
@@ -99,9 +99,10 @@
                             <h3 class="header-title"> Jhanpar Marathon 2019 </h3>
                             <p class="text">संभागीय मैराथन प्रतिस्पर्धा शहडोल : प्रथम संस्करण 2019, झाँपर | </p>							
                             <ul class="header-btn">
-                                <li><a class="main-btn btn-one" href="#register">Register</a></li>
+                                <li><a class="btn btn-success" href="#register">Race Registration </a></li>
                                 <li><a class="main-btn btn-two video-popup" href="https://www.youtube.com/watch?v=qq1kGDd4Q60">WATCH THE VIDEO <i class="lni-play"></i></a></li>
-                            </ul>
+								<li><a class="btn btn-info" href="#volunteer">Volunteer Registration</a></li>
+							</ul>
                         </div> <!-- header content -->
                     </div>
                 </div> <!-- row -->
