--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -102,7 +102,8 @@
                                 <li><a class="btn btn-success" href="#register">Race Registration </a></li>
                                 <li><a class="main-btn btn-two video-popup" href="https://www.youtube.com/watch?v=qq1kGDd4Q60">WATCH THE VIDEO <i class="lni-play"></i></a></li>
 								<li><a class="btn btn-info" href="#volunteer">Volunteer Registration</a></li>
-							</ul>
+				<li><a  class="btn btn-link" href="https://p-y.tm/F-9gnfx"> Pay Here After Registration</a></li>			
+				</ul>
                         </div> <!-- header content -->
                     </div>
                 </div> <!-- row -->
