--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -433,12 +433,10 @@
                         </div>
                         <div class="pricing-list">
                             <ul>
-                                <li><i class="lni-check-mark-circle"> Pay By UPI : 9893878049@sbi</i> </li>                                
-                            </ul>
-							<ul>
-                                <li><i class="lni-check-mark-circle">पेमेंट करने के पश्चात ट्रांज़ैक्शन आईडी, 9893878049 पर sms अथवा whatsapp करें |  </i> </li>                                
-                            </ul>
-							
+                                <li><i class="lni-check-mark-circle"> Pay By UPI : 9893878049@sbi </i> </li>  
+				<li><a  class="btn btn-link" href="https://p-y.tm/F-9gnfx"> Pay Here After Registration</a></li> 
+				<li><i class="lni-check-mark-circle"> Please check reports after payment is done. Reports are hourly updated.</i> </li>  
+                            </ul>						
                         </div>   
                      
                     </div> <!-- single pricing -->
