--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -221,7 +221,7 @@
 						   <div class="col-md-6">
                             <div class="services-content mt-40 d-sm-flex">
                                 <div class="services-icon">
-                                     <img src="assets/images/bandhav.png" alt>
+                                     <img src="assets/images/Bandhav.png" alt>
                                 </div>
                             </div> <!-- services content -->
                         </div>
