--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -99,9 +99,9 @@
                             <h3 class="header-title"> Jhanpar Marathon 2019 </h3>
                             <p class="text">संभागीय मैराथन प्रतिस्पर्धा शहडोल : प्रथम संस्करण 2019, झाँपर | </p>							
                             <ul class="header-btn">
-                                <li><a class="btn btn-success" href="#register">Race Registration </a></li>
+                                <li><a class="btn btn-success" href="https://forms.gle/p1aqtSSM3wshz5At8">Race Registration </a></li>
                                 <li><a class="main-btn btn-two video-popup" href="https://www.youtube.com/watch?v=qq1kGDd4Q60">WATCH THE VIDEO <i class="lni-play"></i></a></li>
-								<li><a class="btn btn-info" href="#volunteer">Volunteer Registration</a></li>
+								<li><a class="btn btn-info" href="https://forms.gle/2u9qDWFRLuTF6bUP7">Volunteer Registration</a></li>
 				<li><a  class="btn btn-link" href="https://p-y.tm/F-9gnfx"> Pay Here After Registration</a></li>			
 				</ul>
                         </div> <!-- header content -->
