--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -225,6 +225,14 @@
                                 </div>
                             </div> <!-- services content -->
                         </div>
+	    
+	    <div class="col-md-6">
+                            <div class="services-content mt-40 d-sm-flex">
+                                <div class="services-icon">
+                                     <img src="assets/images/hope.png" alt>
+                                </div>
+                            </div> <!-- services content -->
+                        </div>
                     </div> <!-- row -->
                 </div> <!-- row -->
             </div> <!-- row -->
