--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -163,7 +163,7 @@
                 <div class="col-lg-12">
                     <div class="section-title text-center pb-10">
                         <marquee>  सर्वश्रेष्ठ प्रदर्शन </marquee>
-                        <p> 10.5 KM संवर्ग में सर्वश्रेष्ठ प्रदर्शन यश शर्मा का रहा जिन्होंने शहडोल संभाग एवं संभाग के बाहर से सम्मलित हुए सभी रनर्स को पीछे करते हुए 34 मिनट लेकर सबसे पहले रेस को पूरा किया | यश शर्मा कटनी जिले से हैं एवं उन्होंने इस मैराथन रेस में आइकॉन रनर्स की श्रेणी में पार्टिसिपेट किया था |  </p>
+                        <p> 10.5 KM संवर्ग में सर्वश्रेष्ठ प्रदर्शन 21 वर्ष  के यश शर्मा का रहा जिन्होंने शहडोल संभाग एवं संभाग के बाहर से सम्मलित हुए सभी रनर्स को पीछे करते हुए 34 मिनट लेकर सबसे पहले रेस को पूरा किया | यश शर्मा कटनी जिले से हैं एवं उन्होंने इस मैराथन रेस में आइकॉन रनर्स की श्रेणी में पार्टिसिपेट किया था |  </p>
                     </div> <!-- section title -->
                 </div>
             </div> <!-- row -->
@@ -178,10 +178,9 @@
 	<section id="prize" class="pricing-area">
 	<div class="container">
 	 <div class="row justify-content-center">
-                <div class="col-lg-6">
+                <div class="col-lg-12 col-md-7 col-sm-9">
                     <div class="section-title text-center pb-10">
-                        <h4 class="text">List of top 6 Runners of Shahdol division in each race category</h4>
-							
+                        <h4 class="text">List of top 6 Runners of Shahdol division in each race category</h4>							
                     </div> <!-- section title -->
                 </div>
             </div> <!-- row -->
