added thanks stmt

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -88,7 +88,8 @@
                     <div class="col-xl-8 col-lg-10">
                         <div class="header-content text-center">
                             <h3 class="header-title">  मैराथन महाकुम्भ  </h3>
-                            <p class="text">संभागीय मैराथन दौड़ स्पर्धा शहडोल : प्रथम संस्करण 2019, झाँपर | </p>							
+                            <p class="text">संभागीय मैराथन दौड़ स्पर्धा शहडोल : प्रथम संस्करण 2019, झाँपर | </p>	
+							<marquee> मैराथन महाकुम्भ में सम्मलित हुए सभी प्रतिभागियों , वालंटियर्स , प्रमोटर्स , स्पोंसर ,अतिथियों एवं दर्शकों का हम आभार व्यक्त करते हैं | आपके सहयोग एवं सहकार्य से स्थानीय प्रतिभाओं को अपने प्रतिभा का प्रदर्शन करने का अवसर प्राप्त हुआ है |  </marquee>
                             <ul class="header-btn">
                                 <!--li><a class="btn btn-success" href="https://forms.gle/p1aqtSSM3wshz5At8">Race Registration </a></li-->
                                 <!-- li><a class="main-btn btn-two video-popup" href="https://www.youtube.com/watch?v=qq1kGDd4Q60">WATCH THE VIDEO <i class="lni-play"></i></a></li -->
